# graphql-hunter

./: .gitignore  AUTH_VALIDATION_EXPLAINED.md  AUTO_DISCOVERY.md  AUTO_DISCOVERY_SUMMARY.md  BURP_EXTENSION_ASSESSMENT.md  BURP_EXTENSION_HANDOFF.md  EXAMPLES.md  IMPORT_FEATURE.md  PROJECT_SUMMARY.md  README.md  ROE.md  add_urls.py  cortext-scan-results.html  gqlh.py  graphql-hunter.py  pyproject.toml  quickstart.bat  requirements.txt  sample-report.html  test-all-exploits.html  test_auth_validation.py  test_new_token.py  test_postman_token.py  test_token_auth.py  test_token_header_format.py  test_tool.py  update_scanners.py
burp-extension/: BappManifest.bmf  build.gradle  gradlew  gradlew.bat  settings.gradle
config/: __init__.py  auth.yaml  payloads.yaml
cortext/: CORTEX_AUTH_ANALYSIS.md  CORTEX_AUTH_SUMMARY.md  variables.txt
examples/: dvga-report.html  dvga-scan.json  example_request.json  example_request.yaml  sample-report.html  sample-report.json
lib/: __init__.py  auto_discover.py  graphql_client.py  html_reporter.py  introspection.py  reporter.py  request_importer.py  utils.py
scanners/: __init__.py  aliasing_scanner.py  auth_bypass_scanner.py  batching_scanner.py  circular_query_scanner.py  csrf_scanner.py  dos_scanner.py  file_upload_scanner.py  info_disclosure_scanner.py  injection_scanner.py  introspection_scanner.py  jwt_scanner.py  mutation_fuzzer.py  rate_limiting_scanner.py  xss_scanner.py
tests/: __init__.py  test_auth_manager.py  test_auto_discover.py  test_cli.py  test_cli_config.py  test_entrypoints.py  test_flows.py  test_html_reporter.py  (+10 more)
(+92 files in other folders)
