[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphql-hunter"
version = "1.0.0"
description = "Comprehensive GraphQL security scanner"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "colorama>=0.4.6",
  "pyyaml>=6.0.1",
]

[project.scripts]
gqlh = "gqlh:main"
graphql-hunter = "gqlh:main"

[tool.setuptools]
py-modules = ["gqlh"]

[tool.setuptools.packages.find]
include = ["lib*", "scanners*", "config*"]

[tool.setuptools.data-files]
"." = ["graphql-hunter.py"]
